--- a/Frontend/Index.html
+++ b/Frontend/Index.html
@@ -3,9 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Prism</title>
+  <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-  
+  <div class="Sign_In">
+    <h1>Sign In</h1>
+    <div class="E-mail">
+      <form id="mali">
+        <label for="mail"><p>Email</p></label>
+        <input type="text" name="login" id="login" placeholder="Example@mail.com">
+      </form>
+    </div>
+    <div class="password">
+      <form id="pword">
+        <label for="pword"><p>Password</p></label>
+        <input type="password" name="pass" class="pass" minlength="8" re>
+      </form>
+    </div>
+    <div class="confirmPassword">
+      <form id="checkpword">
+        <label for="checkpword"><p>Confirm Password</p></label>
+        <input type="password" name="pass" class="pass" minlength="8" re>
+      </form>
+    </div>
+    <div class="AdminCheck">
+      <form>
+        <input id="IsAdmin" type="checkbox">
+        <label for="IsAdmin">Administrator</label>
+      </form>
+    </div>
+    <div class="Sign_In_Button">
+      <button name="Sign In" class="SIB">Sign In</button>
+    </div>
+  </div>
 </body>
 </html>
